--- a/style.css
+++ b/style.css
@@ -555,6 +555,79 @@ a {
   a:hover, a:active {
     outline: 0; }
 
+.main-navigation {
+  font-family: "nimbus-sans-extended", sans-serif; }
+  .main-navigation ul {
+    position: absolute;
+    top: 115px;
+    left: 0;
+    width: 100%;
+    max-height: 0;
+    margin: 0;
+    padding-left: 0;
+    overflow: hidden;
+    list-style: none;
+    background-color: #FFFFFF;
+    -webkit-transition: max-height .8s;
+    -moz-transition: max-height .8s;
+    transition: max-height .8s; }
+    .main-navigation ul li {
+      display: block;
+      margin-bottom: 20px;
+      text-align: center; }
+      .main-navigation ul li > a {
+        display: inline-block;
+        text-decoration: none;
+        color: #2574A9;
+        transition: color .2s; }
+        .main-navigation ul li > a:hover, .main-navigation ul li > a.focus {
+          color: #EF4836;
+          transition: color .2s; }
+  .main-navigation .current_page_item > a,
+  .main-navigation .current-menu-item > a,
+  .main-navigation .current_page_ancestor > a,
+  .main-navigation .current-menu-ancestor > a {
+    color: #EF4836;
+    font-weight: 700; }
+
+/* Mobile menu hamburger icon */
+.menu-toggle {
+  border: none;
+  background-color: #FFFFFF;
+  box-shadow: none; }
+  .menu-toggle > div {
+    width: 24px;
+    height: 4px;
+    background-color: #444444;
+    margin: 4px 0; }
+
+/* Mobile menu */
+.main-navigation.toggled ul {
+  max-height: 240px;
+  -webkit-transition: max-height .8s;
+  -moz-transition: max-height .8s;
+  transition: max-height .8s; }
+
+@media screen and (min-width: 53.125em) {
+  .menu-toggle {
+    display: none; }
+
+  .main-navigation ul {
+    position: relative;
+    top: 0;
+    max-height: inherit;
+    width: inherit;
+    overflow: visible; }
+    .main-navigation ul li {
+      display: inline-block;
+      margin: inherit;
+      padding: 0 10px;
+      border-right: 1px solid #CCCCCC; }
+      .main-navigation ul li:first-child {
+        padding-left: 0; }
+      .main-navigation ul li:last-child {
+        border-right: none;
+        padding-right: 0; } }
 /*--------------------------------------------------------------
 # Accessibility
 --------------------------------------------------------------*/
@@ -643,7 +716,8 @@ a {
 --------------------------------------------------------------*/
 .site-header {
   padding-top: 20px;
-  padding-bottom: 20px; }
+  padding-bottom: 20px;
+  z-index: 20; }
   .site-header .inner {
     display: flex;
     justify-content: space-between;
@@ -652,79 +726,6 @@ a {
 .site-header__logo img {
   width: 100px; }
 
-.main-navigation {
-  font-family: "nimbus-sans-extended", sans-serif; }
-  .main-navigation ul {
-    position: absolute;
-    top: 115px;
-    left: 0;
-    width: 100%;
-    max-height: 0;
-    margin: 0;
-    padding-left: 0;
-    overflow: hidden;
-    list-style: none;
-    background-color: #FFFFFF;
-    -webkit-transition: max-height .8s;
-    -moz-transition: max-height .8s;
-    transition: max-height .8s; }
-    .main-navigation ul li {
-      display: block;
-      margin-bottom: 20px;
-      text-align: center; }
-      .main-navigation ul li > a {
-        display: inline-block;
-        text-decoration: none;
-        color: #2574A9;
-        transition: color .2s; }
-        .main-navigation ul li > a:hover, .main-navigation ul li > a.focus {
-          color: #EF4836;
-          transition: color .2s; }
-  .main-navigation .current_page_item > a,
-  .main-navigation .current-menu-item > a,
-  .main-navigation .current_page_ancestor > a,
-  .main-navigation .current-menu-ancestor > a {
-    color: #EF4836;
-    font-weight: 700; }
-
-/* Mobile menu hamburger icon */
-.menu-toggle {
-  border: none;
-  background-color: #FFFFFF;
-  box-shadow: none; }
-  .menu-toggle > div {
-    width: 24px;
-    height: 4px;
-    background-color: #444444;
-    margin: 4px 0; }
-
-/* Mobile menu */
-.main-navigation.toggled ul {
-  max-height: 240px;
-  -webkit-transition: max-height .8s;
-  -moz-transition: max-height .8s;
-  transition: max-height .8s; }
-
-@media screen and (min-width: 53.125em) {
-  .menu-toggle {
-    display: none; }
-
-  .main-navigation ul {
-    position: relative;
-    top: 0;
-    max-height: inherit;
-    width: inherit;
-    overflow: visible; }
-    .main-navigation ul li {
-      display: inline-block;
-      margin: inherit;
-      padding: 0 10px;
-      border-right: 1px solid #CCCCCC; }
-      .main-navigation ul li:first-child {
-        padding-left: 0; }
-      .main-navigation ul li:last-child {
-        border-right: none;
-        padding-right: 0; } }
 .page-header {
   text-align: center;
   max-width: 700px;
